fix htpasswd default var to fit nginx/tasks/main.yml; set empty-string API KEY/TOKEN defaults for non-existing config/env vars

--- a/env_vars/base.yml
+++ b/env_vars/base.yml
@@ -43,9 +43,9 @@ nginx_media_dir: "/var/www/fragdenstaat.de/storage"
 nginx_private_media_path: "/var/www/fragdenstaat.de/storage"
 
 htpasswd:
-  admin:
-    - name: user
-      password: password
+- name: user
+  password: password
+  realm: admin
 
 django_media_root: "/var/www/fragdenstaat.de/storage/files"
 django_static_root: "/var/www/fragdenstaat.de/public/static"
