--- a/roles/web/vars/main.yml
+++ b/roles/web/vars/main.yml
@@ -35,12 +35,12 @@ django_environment:
   DJANGO_LOG_DIR: "{{ application_log_dir }}"
   DJANGO_SECRET_URL_ADMIN: "{{ django_secret_url_admin }}"
   DJANGO_SENTRY_DSN: "{{ django_sentry_dsn }}"
-  YELP_API_KEY: "{{ yelp_api_key }}"
-  MAPBOX_API_KEY: "{{ mapbox_api_key }}"
-  FOURSQUARE_API_KEY: "{{ foursquare_api_key }}"
-  GOOGLE_PLACES_API_KEY: "{{ google_places_api_key }}"
-  HERE_GEOCODE_API_KEY: "{{ here_geocode_api_key }}"
-  TWILIO_ACCOUNT_SID: "{{ twilio_account_sid }}"
-  TWILIO_AUTH_TOKEN: "{{ twilio_auth_token }}"
-  TWILIO_FROM_NUMBER: "{{ twilio_from_number }}"
+  YELP_API_KEY: "{{ yelp_api_key|default('') }}"
+  MAPBOX_API_KEY: "{{ mapbox_api_key|default('') }}"
+  FOURSQUARE_API_KEY: "{{ foursquare_api_key|default('') }}"
+  GOOGLE_PLACES_API_KEY: "{{ google_places_api_key|default('') }}"
+  HERE_GEOCODE_API_KEY: "{{ here_geocode_api_key|default('') }}"
+  TWILIO_ACCOUNT_SID: "{{ twilio_account_sid|default('') }}"
+  TWILIO_AUTH_TOKEN: "{{ twilio_auth_token|default('') }}"
+  TWILIO_FROM_NUMBER: "{{ twilio_from_number|default('') }}"
   DJANGO_TESSERACT_DATA_PATH: "{{ tesseract_data_path }}"
